# cargo-workspace-inheritance-check

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: publish.yml  release.yml  smoke.yml
scripts/: release.sh
src/: check.rs  diagnostic.rs  fix.rs  lib.rs  main.rs  workspace.rs
tests/: integration_test.rs
tests/fixtures/not_inherited/: Cargo.toml
tests/fixtures/not_inherited/crates/foo/: Cargo.toml
tests/fixtures/promotion_candidate/crates/one/: Cargo.toml
tests/fixtures/promotion_candidate/crates/two/: Cargo.toml
tests/fixtures/registry_different/crates/one/: Cargo.toml
tests/fixtures/registry_different/crates/two/: Cargo.toml
tests/fixtures/registry_mismatch/crates/app/: Cargo.toml
tests/fixtures/registry_not_inherited/: Cargo.toml
tests/fixtures/registry_not_inherited/crates/app/: Cargo.toml
tests/fixtures/registry_promotion/crates/one/: Cargo.toml
tests/fixtures/registry_promotion/crates/two/: Cargo.toml
tests/fixtures/registry_ws_dep/crates/app/: Cargo.toml
tests/fixtures/target_deps/: Cargo.toml
tests/fixtures/target_deps/crates/plat/: Cargo.toml
tests/fixtures/target_deps_promotion/crates/one/: Cargo.toml
tests/fixtures/target_deps_promotion/crates/two/: Cargo.toml
tests/fixtures/valid_workspace/crates/alpha/: Cargo.toml
tests/fixtures/valid_workspace/crates/beta/: Cargo.toml
tests/fixtures/version_mismatch/: Cargo.toml
tests/fixtures/version_mismatch/crates/bar/: Cargo.toml
tests/fixtures/with_exclude/: Cargo.toml
tests/fixtures/with_exclude/crates/excluded/: Cargo.toml
(+1 files in other folders)
